--- a/talks/talks/quals/why.jinja2
+++ b/talks/talks/quals/why.jinja2
@@ -186,13 +186,17 @@
 <section>
   <h2>The Microarchitectural Iteration Loop</h2>
 
-  
+  <div class="center">
+    <img src="./figs/dynamic/tidalsim/uarch_iteration_flow_v2.svg" />
+  </div>
 
+  <p class="center fragment">We want an "Evaluator" that has low latency, high throughput, high accuracy, low cost, and rich output collateral</p>
+  <p class="center fragment"><strong>Existing tools cannot deliver on all axes</strong></p>
   <!-- Can't get all axes using any existing tool (low latency, high throughput, low cost, high accuracy, rich output collateral)! -->
-  <p class="center fragment">Existing pre-silicon evaluation (power, performance, functionality) techniques on real workloads are unsuitable for rapid iteration</p>
+  <!-- <p class="center fragment">Existing pre-silicon evaluation (power, performance, functionality) techniques on real workloads are unsuitable for rapid iteration</p> -->
 </section>
 
-<section>
+<section data-visibility="hidden">
   <h2>Pre-Silicon Microarchitecture Simulation</h2>
 
   <table style="width: 100%; font-size:90%;">
