--- a/talks/base/base.jinja2
+++ b/talks/base/base.jinja2
@@ -43,6 +43,7 @@
       center: {{ center | string | lower }},
       {% endif %}
       hash: true,
+      slideNumber: true,
       plugins: [ Markdown, Notes, Highlight, Zoom ]
     });
     Reveal.configure({ pdfSeparateFragments: false });
