--- a/talks/talks/quals/how_pt2-tidalsim_v2.jinja2
+++ b/talks/talks/quals/how_pt2-tidalsim_v2.jinja2
@@ -19,10 +19,12 @@
 
 <section>
   <h2>1. Generalizing the Spectrum of Simulation</h2>
+  generalization + streaming (no preprocessing step required)
 </section>
 
 <section>
   <h2>2. Modeling Timing-Aware Events (Dynamic Simulation)</h2>
+  going from one-direction simulation to dynamically changing simulators up and down the stack during execution
 </section>
 
 <section>
