--- a/talks/talks/2024_01-quals-tidalsim.jinja2
+++ b/talks/talks/2024_01-quals-tidalsim.jinja2
@@ -18,6 +18,17 @@
 .reveal h2 {
   margin-top: 1rem !important;
 }
+.comparison_table {
+  width: 100%;
+  font-size: 60%;
+  border-collapse: separate !important;
+  thead > tr > th:first-child {
+    border-right: 2px solid #222222;
+  }
+  tbody > tr > td:first-child {
+    border-right: 2px solid #222222;
+  }
+}
 </style>
 {% endblock %}
 
